<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity2">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        android:paddingHorizontal="20dp">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="20dp">

            <ImageView
                android:id="@+id/img_foods"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:contentDescription="@string/dec_image"
                android:scaleType="centerCrop"
                android:src="@drawable/burger" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tv_title"
            style="@style/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Title" />

        <TextView
            style="@style/subTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:text="@string/bahan_bahan" />

        <TextView
            android:id="@+id/tv_bahanContext"
            style="@style/content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_panjang" />

        <TextView
            style="@style/subTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cara_membuat" />

        <TextView
            android:id="@+id/tv_membuatContext"
            style="@style/content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_panjang" />


    </LinearLayout>

</androidx.core.widget.NestedScrollView>